# clean-corpus-platform

./: .gitignore  QUICK_START_NCERT.md  QUICK_START_PG19.md  README.md  TESTING_GUIDE.md  WEB_PDF_FEATURE_SUMMARY.md  ncert_test.yaml  pyproject.toml  requirements.txt
Input-output-exec/checkpoints/: Dolma_HF_NCERT_2026-01-30.json  Dolma_NCERT_Test_2026-01-30.json  class4_hindi_veena_2026_030808.json
configs/: build.yaml  build_s3_template.yaml  ray.yaml  standard_template.yaml
docs/: CLOUD_NATIVE_FINGERPRINTS.md  CONFIGURATION_GUIDE.md  DASHBOARD_SPEC.md  END_TO_END_EXAMPLE.md  GLOBAL_FINGERPRINT_LAYER.md  HOW_TO_ADD_FILES.md  HUGGINGFACE_INTEGRATION.md  NCERT_DOWNLOAD_GUIDE.md  NCERT_JAVASCRIPT_SOLUTION.md  OUTPUT_FORMATS.md  OUTPUT_STRUCTURE.md  PARALLEL_AND_DEDUP_PRIORITY.md  PIPELINE_ORDER.md  PLUGINS.md  RAY_DATA_PIPELINE.md  RUNS_AND_CHECKPOINTS.md  STORAGE_LOCAL_AND_S3.md  STREAMING_DOLMA_RAY.md  TOKENIZER_ADAPTER.md  UNIFIED_CONFIGURATION.md  WEB_PDF_DOWNLOADER.md  WINDOWS_PLAYWRIGHT_TROUBLESHOOTING.md  WRITERS.md
examples/: add_metadata_example.py  add_source_example.py  build_common_pile.yaml  build_dolma_hf_ncert.yaml  build_dolma_ncert_test.yaml  build_gutenberg.yaml  build_local_jsonl.yaml  build_multi_file_example.yaml  build_multi_source.yaml  build_pdf.yaml  build_pg19_local.yaml  build_s3_storage.yaml  build_sangraha_hf.yaml  build_stackexchange.yaml  build_test_minimal.yaml  build_unified.yaml  build_web_pdf_ncert.yaml  build_wikipedia.yaml  sample_internal.jsonl
scripts/: bootstrap_pii.py  checkpoint_report.py  clean_storage.py  convert_hf_to_jsonl.py  diagnose_source.py  discover_ncert_pdfs.py  discover_ncert_pdfs_playwright.py  discover_ncert_pdfs_selenium.py  download_hf_dataset.py  download_web_pdfs.py  install_playwright_browsers.py  install_playwright_safe.py  manual_ncert_url_extractor.py  reset_checkpoint.py  run_local.sh  run_pipeline.bat  run_pipeline.py  run_pipeline.sh  setup_playwright.py  setup_playwright_venv.py  show_run_info.py  show_sources.py  test_dashboard.py  test_hf_download.py  test_pipeline_simple.py  verify_hf_dataset.py  view_analytics.py
src/clean_corpus/: __init__.py  cli.py  logging_.py  output_layout.py  run_id.py
src/clean_corpus/analytics/: schemas.py  sink.py
src/clean_corpus/checkpoints/: store.py
src/clean_corpus/fingerprints/: __init__.py  base.py  chunk_hash_store.py  manager.py  metrics.py  minhash_store.py  priority.py  schema.py  simhash_store.py
src/clean_corpus/monitor/: __init__.py  dashboard.py  unified_app.py
src/clean_corpus/pii/: __init__.py  base.py  redact.py  registry.py
src/clean_corpus/pipeline/: build.py  context.py  ray_data_build.py
src/clean_corpus/plugins/: ray_stage.py  registry.py  stage.py  tokenizer.py
src/clean_corpus/policies/: loader.py
src/clean_corpus/sources/: base.py  hf_stream.py  local_jsonl.py  pdf_source.py  registry.py  web_pdf.py
src/clean_corpus/stages/: base.py  curriculum_eligibility.py  domain_tagging.py  duplodocus_dedup.py  global_dedup.py  impl.py  near_dup_minhash.py  pii_policy.py  ray_quality_gate.py  registry.py  semantic_simhash.py  tokenize_plugin.py  unicode_normalize.py
src/clean_corpus/storage/: __init__.py  base.py  manager.py  s3_writer.py  writer.py
src/clean_corpus/tools/: policy_diff.py  summary_report.py
src/clean_corpus/utils/: fingerprint.py  hashing.py  (+1 more)
storage_test/checkpoints/: Test_Minimal_2026-01-29.json
storage_test/manifests/: Test_Minimal_2026-01-29.json
storage_test/reports/: Test_Minimal_2026-01-29_summary.txt
(+57 files in other folders)
